[package]
name = "cfping"
version = "0.1.0"
authors = ["Ethan Jaszewski <ethanjaszewski@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.1.13"
pnet = "0.23.0"
structopt = "0.3.13"
dns-lookup = "1.0.1"
